fix banner editable text alignment

--- a/src/renderer/components/banner/Banner.scss
+++ b/src/renderer/components/banner/Banner.scss
@@ -5,3 +5,7 @@
   display: flex;
   justify-content: center;
 }
+
+.banner-editable-text {
+  text-align: center;
+}
